--- a/src/assets/overrides.scss
+++ b/src/assets/overrides.scss
@@ -6,6 +6,7 @@
 
 // Don't wrap text inside pre
 pre {
+    border: none;
     overflow: auto;
     word-wrap: normal;
     white-space: pre;
@@ -61,42 +62,6 @@ input[type="radio"] {
             background-color: #ebd9b2;
         }
     }
-}
-/*
-
-NOTE: these styles do not currently work.
-
-.modal {
-  position: absolute;
-  top: 50px;
-  width: 660px;
-  margin-left: -330px;
-}
-
-.modal:after {
-  content: "";
-  height: 0px;
-  position: relative;
-  top: 50px;
-  display: block;
-  border: solid transparent 1px;
-}
-
-.modal-body {
-  height: auto;
-  max-height: none;
-}
-*/
-
-// Scroll modal body.
-.modal-body {
-    overflow: auto;
-}
-
-// Tabs -- border color is hardcoded in navs.scss, change to $btnBorder here
-
-.nav-tabs {
-    margin-bottom: 15px;
 }
 
 // Don't make blockquotes very large since they're often used in the toolform
