specify z-index 100 on linkbox as well

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -292,6 +292,7 @@ div.linkbox {
     background-color: #dfe5f9;
     font-size: 90%;
     text-align: center;
+    z-index: 100;
 }
 
 div.linkbox hr {
