Better placement of the `pre` rule in styles.scss.

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -48,13 +48,6 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 
 @import "overrides.scss";
 
-pre {
-    background-color: $brand-dark;
-    color: white;
-    padding: 1rem;
-    border-radius: 0.5rem;
-}
-
 html {
     position: relative;
     min-height: 100%;
@@ -491,4 +484,15 @@ h6:hover .heading-anchor span:before {
 
 .bg-wg-all {
     background-color: #d87e55 !important;
+}
+
+/* *******
+   Gridsome era additions.
+ * *******/
+
+pre {
+    background-color: $brand-dark;
+    color: white;
+    padding: 1rem;
+    border-radius: 0.5rem;
 }
