Fix a11y test failure by tweaking linkbox contrast. - The failure was actually due to the vertical lines ("|") separating links.   - Not any actual text.   - This darkens them and still looks fine, I think.

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -313,7 +313,7 @@ div.linkbox-horizontal,
     margin-bottom: 15px;
     padding: 0 5px;
     border: 1px solid #ddd;
-    color: #ddd;
+    color: #686868;
     background-color: #efeff9;
     text-align: center;
 }
