Separate subsite label from subsite selector dropdown.

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -99,7 +99,7 @@ footer {
 
 #masthead {
     background-color: $brand-masthead;
-    .subsite-name {
+    #subsite-name {
         color: $brand-masthead-text;
         &:hover {
             color: $brand-masthead-text-hover;
@@ -124,7 +124,7 @@ footer {
             }
         }
     }
-    .light-bg .subsite-name {
+    .light-bg #subsite-name {
         color: black;
     }
     .light-bg .navbar-nav {
