Fix #1215 by floating the body as well as the ToC.

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -556,10 +556,10 @@ pre {
     padding-left: 15px;
 }
 
-/***** Page sections *****/
 .body-wrapper {
     padding-left: 0 !important;
     padding-right: 0 !important;
+    float: left;
 }
 
 /***** Markdown image sizing *****/
