Add middle pane for proteomics.usegalaxy.eu.

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -669,3 +669,7 @@ h6:hover > a > span.icon.icon-link::before {
     top: -2px;
     bottom: 0;
 }
+/***** From galaxyproject.eu *****/
+.tooltable td:nth-child(3) {
+    width: 15%;
+}
