--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @import "variables.scss";
 /* hub-specific overrides to variables */
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
@@ -520,6 +521,35 @@ h6:hover .heading-anchor span:before {
     }
     a:hover {
         text-decoration: underline;
+    }
+}
+
+/* Convenience classes to hide elements below a certain screen width.
+ * These use Bootstrap's breakpoint definitions (found in its scss/_variables.scss file).
+ * See also: https://getbootstrap.com/docs/5.0/layout/breakpoints/
+ */
+// Hide on screens narrower than 576px (by default).
+@media (max-width: map.get($grid-breakpoints, "sm")) {
+    .sm-plus {
+        display: none;
+    }
+}
+// 768px
+@media (max-width: map.get($grid-breakpoints, "md")) {
+    .md-plus {
+        display: none;
+    }
+}
+// 992px
+@media (max-width: map.get($grid-breakpoints, "lg")) {
+    .lg-plus {
+        display: none;
+    }
+}
+// 1200px
+@media (max-width: map.get($grid-breakpoints, "xl")) {
+    .xl-plus {
+        display: none;
     }
 }
 
