--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -602,8 +602,12 @@ pre {
     max-height: 100%;
     object-fit: contain;
 }
+.img-sizer {
+    margin-bottom: 1rem;
+}
 .img-sizer p {
     height: 100%;
+    margin-bottom: 0;
 }
 /***** Markdown styling helpers *****/
 .autowidth img {
